autopilot(http-json-boundaries): accept verified work
Autopilot-Run: chat4j-http-json-boundaries-final-20260823
Autopilot-Item: http-json-boundaries
Autopilot-Attempt: 062f826c-9396-4a87-adb1-3e42a7fb9f61